manifests/deploy-adapters.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nclink-adapters
  namespace: nclink
spec:
  selector:
    matchLabels:
      app: nclink-adapters
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: nclink-adapters
        nclink: "true"
    spec:
      containers:
        - name: nclink-adapters
          image: nanocpu/nclink-adapter:1.0.1
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          volumeMounts:
            - mountPath: /app/cert
              name: configdist-ca
              readOnly: true
      nodeSelector:
        nclink-role: adapter
      tolerations:
        - effect: NoExecute
          key: nclink
          operator: Equal
          value: "true"
      volumes:
        - name: configdist-ca
          secret:
            secretName: configdist-ca
