manifests/deploy-configdist.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-distribute
  namespace: nclink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-distribute
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: config-distribute
        nclink: "true"
    spec:
      containers:
        - name: config-distribute
          image: nanocpu/nclink-configdist:1.0.1
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 8082
          volumeMounts:
            - mountPath: /app/cert
              name: configdist-tls
              readOnly: true
      nodeSelector:
        nclink-role: broker
      tolerations:
        - effect: NoExecute
          key: nclink
          operator: Equal
          value: "true"
      volumes:
        - name: configdist-tls
          secret:
            secretName: configdist-tls

---
apiVersion: v1
kind: Service
metadata:
  name: configdist
  namespace: nclink
spec:
  clusterIP: None
  selector:
    app: config-distribute
