manifests/deploy-modelman-back.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modelman-backend
  namespace: nclink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modelman-backend
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: modelman-backend
        nclink: "true"
    spec:
      containers:
        - name: modelman-backend
          image: nanocpu/nclink-modelmanage-backend:1.0.0
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
      nodeSelector:
        nclink-role: broker
      tolerations:
        - effect: NoExecute
          key: nclink
          operator: Equal
          value: "true"

---
apiVersion: v1
kind: Service
metadata:
  name: modelman-back
  namespace: nclink
spec:
  selector:
    app: modelman-backend
  ports:
    - port: 8080
      targetPort: 8080
