manifests/deploy-mqtt.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mqtt-broker
  namespace: nclink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mqtt-broker
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: mqtt-broker
        nclink: "true"
    spec:
      containers:
        - name: mqtt-broker
          image: eclipse-mosquitto:2.0.9
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 2883
          volumeMounts:
            - mountPath: /mosquitto/config
              name: config
            - mountPath: /mosquitto/secret
              name: password
              readOnly: true
            - mountPath: /mosquitto/log
              name: log
            - mountPath: /mosquitto/data
              name: data
      nodeSelector:
        nclink-role: broker
      tolerations:
        - effect: NoExecute
          key: nclink
          operator: Equal
          value: "true"
      volumes:
        - name: log
          persistentVolumeClaim:
            claimName: mqtt-log
        - name: data
          persistentVolumeClaim:
            claimName: mqtt-data
        - name: config
          configMap:
            name: mqtt-config
        - name: password
          secret:
            secretName: mqtt-secret

---
apiVersion: v1
kind: Service
metadata:
  name: mqtt-broker-headless
  namespace: nclink
spec:
  clusterIP: None
  selector:
    app: mqtt-broker

---
apiVersion: v1
kind: Service
metadata:
  name: mqtt-broker-serv
  namespace: nclink
spec:
  type: NodePort
  externalIPs:
    - 172.16.1.11
  externalTrafficPolicy: Local
  selector:
    app: mqtt-broker
  ports:
    - port: 2883
      targetPort: 2883
      nodePort: 30001
