manifests/deploy-mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deploy
  namespace: nclink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:4.4.4
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: db-data
      nodeSelector:
        nclink-role: broker
      tolerations:
        - effect: NoExecute
          key: nclink
          operator: Equal
          value: "true"
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: mongo-data

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-headless
  namespace: nclink
spec:
  clusterIP: None
  selector:
    app: mongodb

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: nclink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: mongo-express:0.54.0
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
  namespace: nclink
spec:
  selector:
    app: mongo-express
  ports:
    - port: 8081
      targetPort: 8081

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
  namespace: nclink
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - mongo.lightcat.pub
      secretName: nclink-ingress-tls
  rules:
    - host: mongo.lightcat.pub
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
